Version 2.2.0mtn:
	* Merged autorejoin into irc-more.  No prefs migration will take place.
	  You will need to reconfigure the delay yourself.
	* Slashexec's '/exec command' and '!command' are now optional (QuLogic)

Version 2.1.1: 8/19/07
	* Fixed lack of .build, .pidgin-plugin, and Makefile.mingw for convbadger

Version 2.1.0: 8/18/07
	* Completed the convbadger plugin.  It adds a protocol icon to the menu
	  bar of the conversation window.
	* Added the Pidgin-SNPP protocol plugin as snpp
	* Added the /notice command for the irc-more plugin.
	* Added an additional string to the eight_ball plugin (resiak)
	* Autorejoin now has a preference to set the delay time before
	  rejoining.  Fixes #372

Version 2.0.0: 7/13/07
	* Blistops now offers the ability to stretch the display of screen names
	  or aliases into the buddy icon column when no icon exists
	* Blistops now shows the menu bar when hovering near the top of the buddy
	  list window.  Resolves a number of Pidgin bug reports
	* Listhandler now supports alias-only list exports and imports (rseeber)
	* Listhandler now exports and imports buddy notes created with the
	  buddynote plugin
	* Added ignore plugin
	* Added irc-more plugin
	* Added highlight plugin
	* Added incomplete convbadger plugin
	* Added internationalization support to plonkers
	* Added more humorous stuff to eight_ball (resiak)
	* Added support for spaces in filenames to gRIM (rageboy04)
	* Added a stop subcommand in gRIM (rageboy04)
	* Changed order of arguments to gRIM command (rageboy04)
	* Fixed build-by-default status for switchspell
	* Fixed crash in album when using Pidgin 2.0.2 or newer
	* Fixed potential crashes in some other plugins when using Pidgin 2.0.2 or
	  newer
	* Fixed potential random crashes in irssi plugin
	* Fixed make distcheck in the development code

Version 1.0: 5/4/07
	* Updated for Pidgin 2.0.0
	* Fixed build-by-default and win32 building for several plugins
	* Added hideconv plugin
	* Took autoreply back from Pidgin