@@ -1,0 +1,29 @@
+/*
+ * Purple Plugin Pack
+ * Copyright (C) 2003-2005
+ * See ../AUTHORS for a list of all authors
+ *
+ * listhandler: Provides importing, exporting, and copying functions
+ * 				for accounts' buddy lists.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+
+#ifndef _LISTHANDLER_PURPLE_BLIST_XML_H
+#define _LISTHANDLER_PURPLE_BLIST_XML_H
+
+void lh_pbx_import_action_cb(PurplePluginAction *action);
+
+#endif /* _LISTHANDLER_PURPLE_BLIST_XML_H*/
